# reimager

./: .gitignore  README.md  Untitled.ipynb  ez_renamer.py  ez_renamer_home.py  ez_upscaler.py  fix_phoneCam_dateTaken.py  pyproject.toml  stacker.py
.github/: copilot-instructions.md
.ipynb_checkpoints/: 01 prefix imgs by date taken where possible-checkpoint.ipynb  renamer-checkpoint.py
.virtual_documents/: Untitled1.ipynb
