[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "reimager"
version = "0.1.0"
description = "Photo and image-processing utilities"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "colorcet>=3.1",
  "numpy>=1.26",
  "opencv-python>=4.10",
  "piexif>=1.1",
  "pillow>=10.4",
  "pyqt5==5.15.10",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.uv]
package = false
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
